<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity"
                android:orientation="vertical"
                android:background="@drawable/appbg">
    <LinearLayout
            android:layout_weight=".85"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="5dp"
            android:id="@+id/layout_text"
            android:layout_centerVertical="true"
            android:background="@drawable/appbg"
    >

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="0.35" android:id="@+id/menulayout">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/menu"
                    android:autoSizeTextType="uniform"
                    android:textSize="33sp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:id="@+id/menutext"
                    android:layout_weight="0.3"
                    android:layout_margin="20dp"
                    android:label = "Menu"
            />
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="0.65">

            <Button
                    android:id="@+id/btn_Lan"
                    android:text="@string/language"
                    android:textColor="#FFFFFF"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeStepGranularity="2sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:backgroundTint="#CD5C5C"
                    android:background="@drawable/rounded_button"
                    android:layout_weight="0.9"
                    android:layout_margin="15dp"/>
        </RelativeLayout>
    </LinearLayout>



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_mainbuttons"
            android:layout_weight=".15"
            android:gravity="center"
            android:layout_margin="35dp"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btn1"
                android:layout_margin="5dp">

            <Button
                    android:id="@+id/btn_start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/start"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    app:backgroundTint="#7ED321"
                    android:layout_margin="15dp"
                    android:background="@drawable/rounded_button"
            />
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/btn2"
                android:layout_margin="5dp">

            <Button
                    android:id="@+id/btn_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/info"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    app:backgroundTint="#3796F8"
                    android:layout_margin="15dp"
                    android:background="@drawable/rounded_button"
                    />
        </RelativeLayout>


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/btn3"

                android:layout_margin="5dp">

            <Button
                    android:id="@+id/btn_exit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/exit"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    app:backgroundTint="#D0021B"
                    android:background="@drawable/rounded_button"
                    android:layout_margin="15dp"
                    />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>