<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
            android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/appbg">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="60dp"
                android:paddingRight="60dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp"
                    android:id="@+id/buttons">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Information"
                        android:gravity="center"
                        android:textSize="43dp"
                        android:layout_gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp"/>

                <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/text1"
                        android:textColor="#d9e5f3"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:gravity="center"/>
                <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/text2"
                        android:textColor="#d9e5f3"
                        android:textSize="20dp"
                        android:textStyle="bold"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp"/>

                <Button
                        android:id="@+id/button_Door"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/door"
                        android:textColor="#d9e5f3"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="16dp"
                        android:letterSpacing="0.2"
                        app:backgroundTint="#009a9a"
                        android:background="@drawable/rounded_button"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="#4a5a71"></LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp"/>
                <Button
                        android:id="@+id/button_Wall"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/wall"
                        android:textColor="#d9e5f3"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="16dp"
                        android:letterSpacing="0.2"
                        app:backgroundTint="#009a9a"
                        android:background="@drawable/rounded_button"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="#4a5a71"></LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp"/>
                <Button
                        android:id="@+id/button_Corridor"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/corridor"
                        android:textColor="#d9e5f3"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="16dp"
                        android:letterSpacing="0.2"
                        app:backgroundTint="#009a9a"
                        android:background="@drawable/rounded_button"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="#4a5a71"></LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp"/>
                <Button
                        android:id="@+id/button_Elevator"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/elevator"
                        android:textColor="#d9e5f3"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="16dp"
                        android:letterSpacing="0.2"
                        app:backgroundTint="#009a9a"
                        android:background="@drawable/rounded_button"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="#4a5a71"></LinearLayout>

                <LinearLayout


                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp"/>
                <Button
                        android:id="@+id/button_Stairs"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/stairs"
                        android:textColor="#d9e5f3"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="16dp"
                        android:letterSpacing="0.2"
                        app:backgroundTint="#009a9a"
                        android:background="@drawable/rounded_button"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="#4a5a71"></LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">
                    <TextView
                            android:id="@+id/lin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"

                            android:text="@string/have_any_questions"
                            android:textColor="#d9e5f3"
                            android:letterSpacing="0.1"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#4a5a71"></LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">
                    <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/message"
                            android:layout_gravity="center"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email_address_pnu_pusan_ac_kr"
                            android:textColor="#d9e5f3"
                            android:layout_marginLeft="15dp"
                            android:background="#00000000"
                            android:letterSpacing="0.1"
                            android:textSize="16dp"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#4a5a71"></LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">
                    <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/phonemob"
                            android:layout_gravity="center"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mobile_number_010_0000_0000"
                            android:textColor="#d9e5f3"
                            android:layout_marginLeft="15dp"
                            android:background="#00000000"
                            android:letterSpacing="0.1"
                            android:textSize="16dp"
                    />
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#4a5a71"></LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_marginBottom="20dp">
        </LinearLayout>
    </RelativeLayout>
</ScrollView>